@@ -12,7 +12,7 @@ BasicSetup() {
 	export PATH=/usr/sbin:/usr/bin:/sbin:/bin
 
 	#// Copyright year, Build date in YYYYMMDD format, and in MMDDYYYY to make busybox 'date' happy
-	MYDATE="@@MYDATE@@"
+	MYDATE="`cat /etc/build_date`"
 	CPYYEAR="$(echo ${MYDATE} | cut -c 1-4)"
 	BBDATE="$(echo ${MYDATE} | cut -c 5-8)$(echo ${MYDATE} | cut -c 1-4)"
 	DISDATE="$(echo ${MYDATE} | cut -c 7-8) $(echo ${MYDATE} | cut -c 5-6) $(echo ${MYDATE} | cut -c 1-4)"
